fix the navbar hidden behind the map

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -30,30 +30,34 @@ ul.nav > li {
 }
 
 ul.nav > li:hover {
-	background: rgba(0, 0, 0, 0.1);
+	background: #e7e6f1;
+	color: #34A853;
+	
+	
 }
 
 ul.nav > li:hover ul.dropdown {
 	visibility: visible;
 	transform: translate(0, 0);
 	opacity: 1;
-	z-index: 0;
+	z-index: 1;
+	animation-duration: 0.5s;
 }
 
 ul.nav > li:hover ul.dropdown > li {
 	animation-name: slideInLeft;
-	animation-duration: 0.3s;
+	animation-duration: 0.5s;
 	animation-timing-function: ease-in-out;
 	animation-fill-mode: backwards;
 }
 
-ul.nav > li:first-child {
+/* ul.nav > li:first-child {
 	border-top-left-radius: 6px;
 }
 
 ul.nav > li:last-child {
 	border-top-right-radius: 6px;
-}
+} */
 
 ul.dropdown {
 	visibility: hidden;
@@ -66,21 +70,21 @@ ul.dropdown {
 	margin: 0;
 	padding: 5px 0 30px;
 	list-style: none;
-	color: #333;
+	color: #34A853;
 	background: #e5e4ea;
-	border-bottom-left-radius: 6px;
-	border-bottom-right-radius: 6px;
 	box-shadow: 1px 2px 5px -1px rgba(0, 0, 0, 0.15), 0px 4px 14px -1px rgba(0, 0, 0, 0.1);
 	transform: translate(0, -60px);
-	transition: transform 0.2s ease-out, opacity 0.2s, z-index 0s 0.2s;
+	transition: transform 0.2s ease-out, opacity 0.2s;
 	opacity: 0;
 	z-index: -1;
 	overflow: visible;
+
 }
 
 ul.dropdown > li {
 	font-size: 14px;
 	cursor: pointer;
+
 }
 
 ul.dropdown > li:hover {
@@ -98,3 +102,12 @@ ul.dropdown > li:hover {
 		opacity: 1;
 	}
 }
+
+/* @keyframes move{
+	from{
+		transform:  translateY(-5%);
+	}
+	to{
+		transform: translateY(0);
+	}
+} */
